--- a/UI/Views/ProductoSoftware/Index.cshtml
+++ b/UI/Views/ProductoSoftware/Index.cshtml
@@ -16,11 +16,11 @@
                 @using (Html.BeginForm())
                 {
                 <div class="btn-group me-2">
-                 
-                        @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "",@placeholder = @Traducciones["Buscar"].Texto })
 
-                    
-                    <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                    @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "", @placeholder = @Traducciones["Buscar"].Texto })
+
+
+                    <a class="btn btn-sm btn-outline-secondary" href="@Url.Action("ExportarExcel","ProductoSoftware")"><i class="fa fa-download" aria-hidden="true"></i> @Traducciones["Exportar"].Texto</a>
                     <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "ProductoSoftware", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
                 </div>
                 }
