--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link runat="server" rel="shortcut icon" href="~/favicon.ico" type="image/x-icon" />
 
     <title>@ViewBag.Title - A2Cloud</title>
     @Styles.Render("~/Content/css")
@@ -38,7 +38,6 @@
 <body>
 
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-
 
 
         <a href="/Home/Index"  style="font-weight:bold" class="navbar-brand col-md-3 col-lg-2 me-0 px-3">&ensp;A2Cloud &ensp;<i class="fa fa-cloud"></i></a>
