Reporte Asignación de Licencias

--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -153,6 +153,7 @@
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                             <li>@Html.ActionLink(Traducciones["ReporteAsignacionActivos"].Texto, "ReporteAsignacionActivos", "Reportes", null, new { @class = "link-dark rounded", @id = "Rep1" })</li>
                                             <li>@Html.ActionLink(Traducciones["ReporteCicloDeVidaActivos"].Texto, "ReporteCicloDeVidaActivos", "Reportes", null, new { @class = "link-dark rounded", @id = "Rep2" })</li>
+                                            <li>@Html.ActionLink(Traducciones["ReporteAsignacionLicencias"].Texto, "ReporteAsignacionLicencias", "Reportes", null, new { @class = "link-dark rounded", @id = "Rep3" })</li>
 
                                         </ul>
                                     </div>
